Fixed second thumbnail transform precision to eliminate visible line between images

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,9 +42,6 @@
     position: relative;
 }
 
-.thumbnail-container:nth-child(2) .thumbnail-images {
-    transform: translateX(-1px);
-}
 
 .thumbnail-scroller {
     width: 100%;
